src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__call.snap
---
source: src/frontend/ast/parser_test.rs
description: test_parsing
expression: "parse_expr (_test_func! (\"a((1+2),true,'1');\"))"
---
Ok(
    Ast {
        node: Call {
            callee: Var(IdentId(3))[0,1],
            args: [
                BinaryNode {
                    kind: Add,
                    left: Int(1)[3,4],
                    right: Int(2)[5,6],
                }[3,6],
                true[8,12],
                "1"[13,16],
            ],
        }[2,17],
        ident_pool: IdentArray {
            0: "println",
            1: "input",
            2: "str_len",
            3: "a",
        },
    },
)
