src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__call_as_val.snap
---
source: src/frontend/ast/parser_test.rs
description: test_parsing
expression: "parse_expr (_test_func! (\"a(1,1,1)+1;\"))"
---
Ok(
    BinaryNode {
        kind: Add,
        left: Call {
            callee: Var(IdentId(3))[0,1],
            args: [
                Int(1)[2,3],
                Int(1)[4,5],
                Int(1)[6,7],
            ],
        }[2,8],
        right: Int(1)[9,10],
    }[2,10],
)
