src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__chained_access.snap
---
source: src/frontend/ast/parser_test.rs
description: test_parsing
expression: "parse_expr (_test_func! (\"a.b.c.d\"))"
---
Ok(
    Ast {
        node: FieldAccess {
            target: FieldAccess {
                target: FieldAccess {
                    target: Var(IdentId(3))[0:1],
                    requested: Property(
                        IdentId(4)[2:3],
                    )[2:3],
                }[0:3],
                requested: Property(
                    IdentId(5)[4:5],
                )[4:5],
            }[0:5],
            requested: Property(
                IdentId(6)[6:7],
            )[6:7],
        }[0:7],
        ident_pool: IdentArray {
            0: "println",
            1: "input",
            2: "str_len",
            3: "a",
            4: "b",
            5: "c",
            6: "d",
        },
    },
)
