src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__chained_access_call.snap
---
source: src/frontend/ast/parser_test.rs
description: test_parsing
expression: "parse_expr (\"a.b().c().d().e()\")"
---
Ok(
    FieldAccess {
        target: FieldAccess {
            target: FieldAccess {
                target: FieldAccess {
                    target: Var(a)[0,1],
                    requested: Method {
                        callee: "b",
                        callee_span: 2:3,
                        args: [],
                    }[4,5],
                }[2,5],
                requested: Method {
                    callee: "c",
                    callee_span: 6:7,
                    args: [],
                }[8,9],
            }[6,9],
            requested: Method {
                callee: "d",
                callee_span: 10:11,
                args: [],
            }[12,13],
        }[10,13],
        requested: Method {
            callee: "e",
            callee_span: 14:15,
            args: [],
        }[16,17],
    }[14,17],
)
