src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__class_literal_with_static_properties.snap
---
source: src/frontend/ast/parser_test.rs
description: test_parsing
expression: "parse_expr (_test_func! (\"class foo { static a = 10; static var b = 20; }\"))"
---
Ok(
    Ast {
        node: ClassLit {
            name: Some(
                IdentId(3)[6:9],
            ),
            fields: {
                (
                    IdentId(5),
                    true,
                ): Field {
                    default: Some(
                        Int(20)[42:44],
                    ),
                    readonly: false,
                    name_span: 38:39,
                    modifier_span: 27:37,
                    private: false,
                }[27:45],
                (
                    IdentId(4),
                    true,
                ): Field {
                    default: Some(
                        Int(10)[23:25],
                    ),
                    readonly: true,
                    name_span: 19:20,
                    modifier_span: 12:18,
                    private: false,
                }[12:26],
            },
            methods: {},
        }[10:47],
        ident_pool: IdentArray {
            0: "println",
            1: "input",
            2: "str_len",
            3: "foo",
            4: "a",
            5: "b",
        },
    },
)
