src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__corrected_access_call.snap
---
source: src/frontend/ast/parser_test.rs
description: test_parsing
expression: "parse_expr (_test_func! (\"(((a.b()).c()).d()).e()\"))"
---
Ok(
    Ast {
        node: FieldAccess {
            target: FieldAccess {
                target: FieldAccess {
                    target: FieldAccess {
                        target: Var(IdentId(4))[3:4],
                        requested: Method {
                            callee: IdentId(5),
                            callee_span: 5:6,
                            args: [],
                            arg_span: 7:8,
                        }[5:8],
                    }[3:8],
                    requested: Method {
                        callee: IdentId(6),
                        callee_span: 10:11,
                        args: [],
                        arg_span: 12:13,
                    }[10:13],
                }[3:13],
                requested: Method {
                    callee: IdentId(7),
                    callee_span: 15:16,
                    args: [],
                    arg_span: 17:18,
                }[15:18],
            }[3:18],
            requested: Method {
                callee: IdentId(8),
                callee_span: 20:21,
                args: [],
                arg_span: 22:23,
            }[20:23],
        }[3:23],
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "a",
            5: "b",
            6: "c",
            7: "d",
            8: "e",
        },
        file_id: FileId(Anon),
    },
)
