src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__do block.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: do block\n──────────────────────────────────────────────────────────────────────────────────\ndo{\n    var a = 1;\n    1+a\n}"
expression: parse_expr (& source)
info: test_parser_block_expressions
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "a",
        },
        file_id: FileId(Anon),
    } = Do{
        Decl::IdentId(4) = Int(1)[16:17][8:17],
        Result(
            BinaryNode {
                kind: Add,
                left: Int(1)[23:24],
                right: Var(IdentId(4))[25:26],
            },
        )[23:26],
    }[2:28],
)
