src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__do_block.snap
---
source: src/frontend/ast/parser_test.rs
description: test_parsing
expression: "parse_expr (_test_func! (\"do{var a = 1;1+a}\"))"
---
Ok(
    Do{
        Decl::a = Int(1)[11,12][3,12],
        Result(
            BinaryNode {
                kind: Add,
                left: Int(1)[13,14],
                right: Var(a)[15,16],
            },
        )[13,16],
    }[2,17],
)
