src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__elseif expression.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: elseif expression\n──────────────────────────────────────────────────────────────────────────────────\nif false {\n    \"hello\"\n} else if 19 < 9 {\n    \"impossible\"\n} else {\n    \"bye\"\n}"
expression: parse_expr (& source)
info: test_parser_block_expressions
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
        },
        file_id: FileId(Anon),
    } = Branch {
        condition: false[3:8],
        if_block: [
            Result(
                "hello",
            )[15:22],
        ][9:24],
        else_block: Some(
            [
                Branch {
                    condition: BinaryNode {
                        kind: Lesser,
                        left: Int(19)[33:35],
                        right: Int(9)[38:39],
                    }[33:39],
                    if_block: [
                        Result(
                            "impossible",
                        )[46:58],
                    ][40:60],
                    else_block: Some(
                        [
                            Result(
                                "bye",
                            )[72:77],
                        ][66:79],
                    ),
                }[33:41],
            ][33:41],
        ),
    }[3:10],
)
